
SUBDIRS = WASD

dist_noinst_DATA =			\
		apl.loadkeys		\
		apl.vim			\
		apl.xkb			\
		apl.xkm			\
		apl.xmodmap		\
		apl.dyalog.xmodmap	\
		keyboard.txt		\
		keyboard.dyalog.txt	\
		keyboard1.txt		\
		keyboard1.dyalog.txt	\
		apl.unicomp.xkb		\
		apl.unicomp.xkb.txt	\
		Unicomp1.jpg		\
		Unicomp2.jpg

