

pkglib_LTLIBRARIES = file_io.la		\
                  template_F0.la	\
                  template_F12.la	\
                  template_OP1.la	\
                  template_OP2.la	


file_io_la_SOURCES = file_io.cc
file_io_la_LDFLAGS = -no-undefined -module -avoid-version -export-dynamic

template_F0_la_SOURCES = template_F0.cc template.hh
template_F0_la_LDFLAGS = -no-undefined -module -avoid-version -export-dynamic

template_F12_la_SOURCES = template_F12.cc template.hh
template_F12_la_LDFLAGS = -no-undefined -module -avoid-version -export-dynamic

template_OP1_la_SOURCES = template_OP1.cc template.hh
template_OP1_la_LDFLAGS = -no-undefined -module -avoid-version -export-dynamic

template_OP2_la_SOURCES = template_OP2.cc template.hh
template_OP2_la_LDFLAGS = -no-undefined -module -avoid-version -export-dynamic


