
# testcases that may be of interest

# put them into apl-x.x.tar.gz, but don't install them.
#
dist_noinst_DATA =				\
	AAA0_Global_Settings.tc			\
	AP100.tc				\
	AP210.tc				\
	APnnn_1011.sh APnnn_1011.tc2 APnnn.tc	\
	File_IO.tc				\
	NativeFunctions.tc			\
	Quad_ARG.tc				\
	Quad_CR.tc				\
	Quad_INP.tc				\
	UserCommand.tc				\
	Performance.pt

tar:
	tar cvzf testcases.tgz *.tc *.pt

