
pkglib_LTLIBRARIES =	libemacs.la

libemacs_la_SOURCES =						\
		DefCommand.cc		DefCommand.hh		\
		emacs.cc		emacs.hh		\
		FnCommand.cc		FnCommand.hh		\
		GetVarCommand.cc	GetVarCommand.hh	\
		network.cc		network.hh		\
		NetworkCommand.hh				\
		NetworkConnection.cc	NetworkConnection.hh	\
		RunCommand.cc		RunCommand.hh		\
		SicCommand.cc		SicCommand.hh		\
		SiCommand.cc		SiCommand.hh		\
		util.cc			util.hh			\
		VariablesCommand.cc    VariablesCommand.hh

libemacs_la_CXXFLAGS = -I..
